Compiler/tests/good/Output/07_output.rs
// Single line comment
fn main(){
  print!(0);
  return;
}
