Compiler/tests/bad/Comments/02_comment.rs
/* 
    /* 
        /*
        asdasdads 
        */
        asdasd

        asdas
*/

fn main(){return;}